tests/ui/const-generics/kind_mismatch.stderr
error[E0747]: type provided when a constant was expected
  --> $DIR/kind_mismatch.rs:11:38
   |
LL | impl<K> ContainsKey<K> for KeyHolder<K> {}
   |      -                               ^
   |      |
   |      help: consider changing this type parameter to a const parameter: `const K: u8`

error[E0747]: type provided when a constant was expected
  --> $DIR/kind_mismatch.rs:11:21
   |
LL | impl<K> ContainsKey<K> for KeyHolder<K> {}
   |      -              ^
   |      |
   |      help: consider changing this type parameter to a const parameter: `const K: u8`

error[E0282]: type annotations needed
  --> $DIR/kind_mismatch.rs:22:29
   |
LL |     let map: KeyHolder<0> = remove_key::<_, _>();
   |                             ^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `K` declared on the function `remove_key`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0282, E0747.
For more information about an error, try `rustc --explain E0282`.
